left shift issue corrected

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,7 +81,6 @@
 
 html,
 body {
-  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -106,3 +105,6 @@ a {
   border: 2px solid #2E86C1;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
+
+
+          
